--- a/templates/users.html
+++ b/templates/users.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Users-Movie Web App</title>
+    <title>Users - MovieWeb App</title>
 </head>
 <body>
-    <h1> List of current Users </h1>
-    {% for user in users %}
-    <ul>{{ user.name }}</ul>
-    {% endfor %}
+    <h1>Users</h1>
+    <ul>
+        {% for user in users %}
+        <li>
+            <a href="{{ url_for('user_movies', user_id=user.id) }}">{{ user.name }}</a>
+        </li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
