--- a/templates/users.html
+++ b/templates/users.html
@@ -15,7 +15,12 @@
             <a href="{{ url_for('user_movies', user_id=user.id) }}" class="text-decoration-none">
                 {{ user.name }}
             </a>
-            <span class="badge bg-secondary rounded-pill">{{ user.movies|length }} movies</span>
+            <div>
+                <span class="badge bg-secondary rounded-pill me-2">{{ user.movies|length }} movies</span>
+                <form action="{{ url_for('delete_user', user_id=user.id) }}" method="post" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete user {{ user.name }} and all their movies? This action cannot be undone.');">
+                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                </form>
+            </div>
         </li>
         {% endfor %}
     </ul>
